--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,31 @@
 
 .nav_meni {
   background-color: #0275d8;
-  height: 50px;
+  height: 65px;
   padding-top: 10px;
 }
-
 
 .nav_meni a {
   text-decoration: none;
   color: #fcffa0;
   font-size: 30px;
+}
+
+.nav_meni a:hover {
+  color: #fcffa0;
+}
+
+#digimon_img {
+  height: 200px;
+  width: 200px;
+}
+
+.digimoni_map {
+  display: grid;
+  grid-template-columns: 200px 200px 200px 200px 200px;
+  grid-template-rows: 200px 200px 200px 200px 200px;
+  grid-row-gap: 100px;
+  grid-column-gap: 120px;
+  justify-content: center;
+  margin-top: 50px;
 }
